public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */

body {
  background-color: #f4f1ec;
  font-family: "Source Sans Pro", sans-serif;
  font-size: 24px;
  color: #545149;
}

.header {
  padding-top: 105.6px;
  height: 400px;
  width: 100%;
}

main.body {
  margin: 5%;
}

/* Desktop styles */
@media only screen and (min-width: 1024px) {
  main.body {
    margin: 5%;
    margin-top: 120px;
    width: 60%;
    float: right;
  }

  .header {
    width: 30%;
    float: left;
    padding-top: 105.6px;
    height: 400px;
  }
}

